--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <li class="card">
                 <a href="./task-manager/index.html" class="card_link">Task Manager</a>
             </li>
+            <li class="card">
+                <a href="./budget-calculator/index.html" class="card_link">Budget Calculator</a>
+            </li>
         </ul>
     </div>
 </body>
