fix(calculator): add csv export + validation

--- a/budget-calculator/index.html
+++ b/budget-calculator/index.html
@@ -128,6 +128,7 @@
             <div id="balanceByCategoryList"></div>
             <div id="balanceByDateList"></div>
             <div id="balanceByTypeList"></div>
+            <button id="exportCsvBtn" class="btn-primary">Export CSV</button>
         </div>
         <script type="module" src="./index.js"></script>
     </body>
