--- a/slider/index.html
+++ b/slider/index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/common.css">
-    <title>Slider</title>
-</head>
-<style>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../styles/common.css">
+        <title>Slider</title>
+    </head>
+    <style>
     .slider {
         width: 100%;
         height: 100%;
         overflow-x: auto;   
         overflow-y: hidden;
         scroll-snap-type: x proximity; 
+        position: relative;
     }
+    .dots {
+        position: absolute;
+        left: 50%;
+        top: 45%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: 8px;
+        pointer-events: auto;
+        color: #333;
+    }
+
+    .dot {
+        width: 10px;
+        height: 10px;
+        border: 0;
+        border-radius: 50%;
+        background: #cbd5e1; 
+        opacity: 0.8;
+        cursor: pointer;
+    }
+
+    .dot:hover { opacity: 1; }
+    .dot.active { background: #3b82f6; }
+
     .track {
         display: flex; 
         gap: 0px;
@@ -64,41 +89,45 @@
         color: #fff;
     }
 </style>
-<body>
-    <header>
-        <div class="container_header">
-            <div class="container_header_item">
-                <a href="./index.html" class="card_link">Home</a>
-            </div>
-        </div>
-    </header>
-    <div class="container">
-        <h1>Slider</h1>
-        <div class="slider" id="slider">
-            <div class="track" id="track">
-                <div class="slide">
-                    <h2>Popup</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
-                </div>
-                <div class="slide">
-                    <h2>Popup2</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
-                </div>
-                <div class="slide">
-                    <h2>Popup3</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
-                </div>
-                <div class="slide">
-                    <h2>Popup4</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+    <body>
+        <header>
+            <div class="container_header">
+                <div class="container_header_item">
+                    <a href="./index.html" class="card_link">Home</a>
                 </div>
             </div>
+        </header>
+        <div class="container">
+            <h1>Slider</h1>
+            <div class="slider" id="slider">
+                <div class="track" id="track">
+                    <div class="slide">
+                        <h2>Popup</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Quisquam, quos.</p>
+                    </div>
+                    <div class="slide">
+                        <h2>Popup2</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Quisquam, quos.</p>
+                    </div>
+                    <div class="slide">
+                        <h2>Popup3</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Quisquam, quos.</p>
+                    </div>
+                    <div class="slide">
+                        <h2>Popup4</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Quisquam, quos.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="controls">
+                <button class="prev" id="prev" aria-label="Previous slide">Prev</button>
+                <button class="next" id="next" aria-label="Next slide">Next</button>
+            </div>
         </div>
-        <div class="controls">
-            <button class="prev" id="prev">Prev</button>
-            <button class="next" id="next">Next</button>
-        </div>
-    </div>
-    <script src="./index.js"></script>
-</body>
+        <script src="./index.js"></script>
+    </body>
 </html>
