--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <li class="card">
                 <a href="./budget-calculator/index.html" class="card_link">Budget Calculator</a>
             </li>
+            <li class="card">
+                <a href="./gallery/index.html" class="card_link">Gallery</a>
+            </li>
         </ul>
     </div>
 </body>
