feat(calendar): add new task

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <li class="card">
                 <a href="./gallery/index.html" class="card_link">Gallery</a>
             </li>
+            <li class="card">
+                <a href="./calender/index.html" class="card_link">Calender</a>
+            </li>
         </ul>
     </div>
 </body>
