--- a/index.html
+++ b/index.html
@@ -4,7 +4,271 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Practice</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/common.css">
+    <style>
+        /* Enhanced main page styles */
+        .container_main_title {
+            font-size: 48px !important;
+            font-weight: 800 !important;
+            text-align: center !important;
+            margin-bottom: 60px !important;
+            position: relative;
+            animation: titleSlideIn 1s ease-out;
+        }
+
+        .container_main_title::after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 4px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            border-radius: 2px;
+            animation: underlineExpand 1.2s ease-out 0.5s both;
+        }
+
+        @keyframes titleSlideIn {
+            from {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes underlineExpand {
+            from {
+                width: 0;
+            }
+            to {
+                width: 80px;
+            }
+        }
+
+        .container_body {
+            list-style: none !important;
+            padding: 0 !important;
+            margin: 0 !important;
+            display: grid !important;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)) !important;
+            gap: 24px !important;
+            animation: cardsSlideIn 1s ease-out 0.3s both;
+        }
+
+        @keyframes cardsSlideIn {
+            from {
+                opacity: 0;
+                transform: translateY(40px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .container_body .card {
+            height: 120px !important;
+            border-radius: 20px !important;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.8) 100%) !important;
+            backdrop-filter: blur(20px) !important;
+            border: 1px solid rgba(255, 255, 255, 0.3) !important;
+            box-shadow: 
+                0 8px 32px rgba(0, 0, 0, 0.1),
+                0 4px 16px rgba(0, 0, 0, 0.05),
+                inset 0 1px 0 rgba(255, 255, 255, 0.8) !important;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1) !important;
+            position: relative !important;
+            overflow: hidden !important;
+            animation: cardFloatIn 0.8s ease-out both;
+        }
+
+        .container_body .card:nth-child(1) { animation-delay: 0.1s; }
+        .container_body .card:nth-child(2) { animation-delay: 0.2s; }
+        .container_body .card:nth-child(3) { animation-delay: 0.3s; }
+        .container_body .card:nth-child(4) { animation-delay: 0.4s; }
+        .container_body .card:nth-child(5) { animation-delay: 0.5s; }
+
+        @keyframes cardFloatIn {
+            from {
+                opacity: 0;
+                transform: translateY(60px) scale(0.8);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
+        }
+
+        .container_body .card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.6), transparent);
+            transition: left 0.6s ease;
+        }
+
+        .container_body .card:hover::before {
+            left: 100%;
+        }
+
+        .container_body .card:hover {
+            transform: translateY(-8px) scale(1.03) !important;
+            box-shadow: 
+                0 20px 40px rgba(102, 126, 234, 0.15),
+                0 8px 20px rgba(0, 0, 0, 0.1),
+                inset 0 1px 0 rgba(255, 255, 255, 0.9) !important;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.98) 0%, rgba(255, 255, 255, 0.9) 100%) !important;
+        }
+
+        .container_body .card_link {
+            display: flex !important;
+            align-items: center !important;
+            justify-content: center !important;
+            width: 100% !important;
+            height: 100% !important;
+            text-decoration: none !important;
+            color: #667eea !important;
+            font-weight: 700 !important;
+            font-size: 18px !important;
+            text-align: center !important;
+            padding: 20px !important;
+            box-sizing: border-box !important;
+            transition: all 0.3s ease !important;
+            position: relative !important;
+            z-index: 2 !important;
+        }
+
+        .container_body .card_link:hover {
+            color: #764ba2 !important;
+            transform: scale(1.05) !important;
+        }
+
+        /* Add icons to each card */
+        .container_body .card:nth-child(1) .card_link::before {
+            content: '📝';
+            font-size: 24px;
+            margin-right: 12px;
+            animation: iconBounce 2s ease-in-out infinite;
+        }
+
+        .container_body .card:nth-child(2) .card_link::before {
+            content: '🎨';
+            font-size: 24px;
+            margin-right: 12px;
+            animation: iconBounce 2s ease-in-out infinite 0.2s;
+        }
+
+        .container_body .card:nth-child(3) .card_link::before {
+            content: '✅';
+            font-size: 24px;
+            margin-right: 12px;
+            animation: iconBounce 2s ease-in-out infinite 0.4s;
+        }
+
+        .container_body .card:nth-child(4) .card_link::before {
+            content: '💰';
+            font-size: 24px;
+            margin-right: 12px;
+            animation: iconBounce 2s ease-in-out infinite 0.6s;
+        }
+
+        .container_body .card:nth-child(5) .card_link::before {
+            content: '📖';
+            font-size: 24px;
+            margin-right: 12px;
+            animation: iconBounce 2s ease-in-out infinite 0.8s;
+        }
+
+        @keyframes iconBounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-5px);
+            }
+            60% {
+                transform: translateY(-3px);
+            }
+        }
+
+        /* Enhanced container */
+        .container {
+            padding: 60px 32px !important;
+            max-width: 1200px !important;
+        }
+
+        /* Floating particles background */
+        body::after {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: 
+                radial-gradient(circle at 25% 25%, rgba(102, 126, 234, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 75% 75%, rgba(118, 75, 162, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 50% 50%, rgba(120, 219, 255, 0.05) 0%, transparent 50%);
+            pointer-events: none;
+            z-index: -1;
+            animation: backgroundFloat 20s ease-in-out infinite;
+        }
+
+        @keyframes backgroundFloat {
+            0%, 100% {
+                transform: translateY(0) rotate(0deg);
+            }
+            50% {
+                transform: translateY(-20px) rotate(1deg);
+            }
+        }
+
+        /* Responsive design */
+        @media (max-width: 768px) {
+            .container_main_title {
+                font-size: 36px !important;
+                margin-bottom: 40px !important;
+            }
+
+            .container_body {
+                grid-template-columns: 1fr !important;
+                gap: 16px !important;
+            }
+
+            .container_body .card {
+                height: 100px !important;
+            }
+
+            .container_body .card_link {
+                font-size: 16px !important;
+            }
+
+            .container_body .card_link::before {
+                font-size: 20px !important;
+                margin-right: 8px !important;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 40px 20px !important;
+            }
+
+            .container_main_title {
+                font-size: 28px !important;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -21,6 +285,9 @@
             </li>
             <li class="card">
                 <a href="./budget-calculator/index.html" class="card_link">Budget Calculator</a>
+            </li>
+            <li class="card">
+                <a href="./blog/index.html" class="card_link">Blog</a>
             </li>
         </ul>
     </div>
