add fixes to main

--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@
             <li class="card">
                 <a href="./contacts/index.html" class="card_link">Contacts</a>
             </li>
+            <li class="card">
+                <a href="./geo/index.html" class="card_link">Geo app</a>
+            </li>
         </ul>
     </div>
 </body>
