--- a/index.html
+++ b/index.html
@@ -300,6 +300,9 @@
             <li class="card">
                 <a href="./geo/index.html" class="card_link">Geo app</a>
             </li>
+            <li class="card">
+                <a href="./content-editor/index.html" class="card_link">Content Editor</a>
+            </li>
         </ul>
     </div>
 </body>
